[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "be_great"
version = "0.0.3"
authors = [
  { name="Kathrin Sessler", email="kathrin.sessler@tum.de" },
]
description = "Generating Realistic Tabular Data using Large Language Models"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["great", "pytorch", "tabular data", "data generation", "transformer", "language models", "deep learning"]
dependencies = [
    "datasets >= 2.5.2",  
    "numpy >= 1.21.6",
    "pandas >= 1.3.5",
    "scikit_learn >= 1.0.2",
    "torch >= 1.10.2",
    "tqdm >= 4.64.1",
    "transformers >= 4.20.1" 
]

[project.urls]
"Homepage" = "https://github.com/kathrinse/be_great"
"Documentation" = "https://kathrinse.github.io/be_great/"

[tool.setuptools]
packages = ["be_great"]
